# sr250-uwbiot-zephyr

./: LICENSE  README.md  SBOM.spdx.json
uwbiot-top/boards/: CMakeLists.txt
uwbiot-top/boards/Host/nxp/: CMakeLists.txt
uwbiot-top/boards/Host/nxp/frdm_rw612/: CMakeLists.txt  UWB_GPIOExtender.c  UWB_GPIOExtender.h  board.h  boards.c  boards.h  driver_config.h  hardware_init.c  peripherals.c  peripherals.h  spi_driver_config.h  uwb_bus_interface.c  uwb_bus_io.c
uwbiot-top/boards/Host/nxp/frdm_rw612/include/: UWB_Assert.h  UWB_DeviceCalib_values.h  UWB_DeviceConfig.h  UWB_DeviceConfig_SR2XXT.h  uwb_board.h  uwb_bus_board.h
uwbiot-top/boards/uwbs_driver/: uwb_bus_interface.h
uwbiot-top/demos/: CMakeLists.txt
uwbiot-top/demos/SR2XX/: CMakeLists.txt
uwbiot-top/demos/SR2XX/demo_device_calibration/: CMakeLists.txt  demo_device_calibration.c  readme.rst
uwbiot-top/demos/SR2XX/demo_device_calibration/zephyr/: CMakeLists.txt  prj.conf  uwb_iot_ftr.h
uwbiot-top/demos/SR2XX/demo_device_calibration/zephyr/boards/: frdm_rw612.overlay
uwbiot-top/demos/SR2XX/demo_nearby_interaction/: CMakeLists.txt  demo_nearby_interaction.c  readme.rst
uwbiot-top/demos/SR2XX/demo_nearby_interaction/inc/: TLV_Types_i.h  demo_device_config_i.h  uwb_nearby_service.h
uwbiot-top/demos/SR2XX/demo_nearby_interaction/src/: TLV_Builder.c  TLV_Mng.c  uwb_nearby_service.c
uwbiot-top/demos/SR2XX/demo_nearby_interaction/zephyr/: CMakeLists.txt  prj.conf  uwb_iot_ftr.h
uwbiot-top/demos/SR2XX/demo_sr2xx_fw_update/: CMakeLists.txt  demo_sr2xx_fw_update.c  readme.rst
uwbiot-top/demos/SR2XX/demo_sr2xx_fw_update/zephyr/: CMakeLists.txt  prj.conf  uwb_iot_ftr.h
uwbiot-top/demos/common/: AppInternal.h  AppStateManagement.c  AppStateManagement.h  CMakeLists.txt  Demo_Common_Config.c  Demo_Common_Config.h  Standalone_Main.c  Utilities.c  Utilities.h  app_Ranging_Cfg.h  demo_app_callbacks.c  gatt_alloc_x_uwb_ble.h  gatt_db_uwb_ble.h  gatt_uuid128_uwb_ble.h
uwbiot-top/demos/common/demo_ranging_controlee/: CMakeLists.txt  demo_ranging_controlee.c  readme.rst
uwbiot-top/demos/common/demo_ranging_controlee/zephyr/: CMakeLists.txt  prj.conf  uwb_iot_ftr.h
uwbiot-top/demos/common/demo_ranging_controller/: CMakeLists.txt  demo_ranging_controller.c  readme.rst
uwbiot-top/demos/common/demo_ranging_controller/zephyr/: CMakeLists.txt  prj.conf
uwbiot-top/demos/common/pnp/: CMakeLists.txt  UWBPnP_Common.c  UWB_DRIVER.h  UWB_Evt_Pnp.h  UWB_Spi_Driver_Interface.h  UWB_Spi_Driver_Interface_Sr1xx_Sr2xx.c  UwbPnpInternal.h  Uwb_Hif_Handler_Zephyr.c  Uwb_Hif_Handler_posix.c  Uwb_Read_task.h  Uwb_Read_task_Zephyr.c  Uwb_Read_task_posix.c  Uwb_Usb_Vcom_Pnp.c  Uwb_Usb_Vcom_Pnp_Zephyr.c  Uwb_Vcom_Pnp.h
uwbiot-top/demos/common/pnp/FRDM_RW612/: PnP_Main.c  app_config.h  readme.rst
uwbiot-top/demos/common/pnp/FRDM_RW612/zephyr/: CMakeLists.txt  prj.conf  uwb_iot_ftr.h
uwbiot-top/demos/common/vcom_common/: CMakeLists.txt  UwbHif.c  UwbHif.h  Uwb_usb_zephyr.c  Uwb_usb_zephyr.h
uwbiot-top/demos/radar/: CMakeLists.txt
uwbiot-top/demos/radar/demo_ocpd/: CMakeLists.txt  demo_ocpd.c  readme.rst
uwbiot-top/demos/radar/demo_ocpd/zephyr/: CMakeLists.txt  prj.conf
uwbiot-top/demos/radar/demo_radar/: CMakeLists.txt  demo_radar.c  readme.rst
uwbiot-top/demos/radar/demo_radar/zephyr/: CMakeLists.txt  prj.conf  uwb_iot_ftr.h
uwbiot-top/libs/halimpl/: CMakeLists.txt
uwbiot-top/libs/halimpl/fwd/SR2XX/: phNxpUciHal_fwd.c  phNxpUciHal_fwd.h
uwbiot-top/libs/halimpl/fwdl_provider/: uwb_fwdl_ext.c  uwb_fwdl_ram.c
uwbiot-top/libs/halimpl/hal/: phNxpUciHal.c  phNxpUciHal_ext.c
uwbiot-top/libs/halimpl/inc/: UWB_Evt.h  UwbCoreSDK_Internal.h  nxAntennaDefine.h  nxEnsure.h  phNxpLogApis_App.h  phNxpLogApis_Board.h  phNxpLogApis_FwDnld.h  phNxpLogApis_HalUci.h  phNxpLogApis_HalUtils.h  phNxpLogApis_SE_Wrapper.h  phNxpLogApis_Swup.h  phNxpLogApis_TmlUwb.h  phNxpLogApis_UciCore.h  phNxpLogApis_UwbApi.h  phNxpLogDefault.h  phNxpUciHal.h  phNxpUciHal_Adaptation.h  phNxpUciHal_CoreConfig.h  phNxpUciHal_ext.h  phNxpUciHal_utils.h  phNxpUwbConfig.h  phOsalUwb.h  phOsalUwb_Internal.h  phOsalUwb_Queue.h  phOsalUwb_Thread.h  phOsalUwb_Timer.h  phTmlUwb.h  phTmlUwb_transport.h  phUwbCommon.h  phUwbCompId.h  phUwbErrorCodes.h  phUwbStatus.h  phUwbTypes.h  phUwb_BuildConfig.h  utlv.h  uwb_board_flash_interface.h  uwb_board_values.h  uwb_extfl_provider_interface.h  uwb_fwdl_provider.h  uwb_iot_ftr.h.in  (+5 more)
uwbiot-top/libs/halimpl/log/: CMakeLists.txt  nxLog.c
uwbiot-top/libs/halimpl/osal/: phOsalUwb_Queue_Zephyr.c  phOsalUwb_Thread_Zephyr.c  phOsalUwb_Timer_Zephyr.c  phOsalUwb_Zephyr.c
uwbiot-top/libs/halimpl/tml/: phTmlUwb.c  phTmlUwb_transport.c
uwbiot-top/libs/halimpl/transport/SPI/: phNxpUwb_Common.h
uwbiot-top/libs/halimpl/transport/SPI/SR2XX/: uwb_uwbs_tml_interface.c
uwbiot-top/libs/halimpl/transport/SPI/common/: phNxpUwb_Common.c
uwbiot-top/libs/halimpl/utils/: phNxpUciHal_utils.c  phNxpUwbConfig.c  utlv.c
uwbiot-top/libs/uci-core/: CMakeLists.txt
uwbiot-top/libs/uci-core/inc/: uci_defs.h  uci_hmsgs.h  uci_test_defs.h  uwa_api.h  uwa_dm_int.h  uwa_sys.h  uwb_int.h  uwb_types.h
uwbiot-top/libs/uci-core/inc/SRXXX/: uci_ext_defs.h
uwbiot-top/libs/uci-core/src/: uci_hmsgs.c  uwa_dm_act.c  uwa_dm_api.c  uwa_dm_main.c  uwa_sys_main.c  uwb_main.c  uwb_task.c  uwb_ucif.c
uwbiot-top/libs/uwb-iot/uwb_api/: CMakeLists.txt
uwbiot-top/libs/uwb-iot/uwb_api/fira_generic/: PrintUtility.c  PrintUtility.h  UwbApi.c  UwbApi.h  UwbApi_Internal.c  UwbApi_Internal.h  UwbApi_Types.h  UwbApi_Utility.c  UwbApi_Utility.h
uwbiot-top/libs/uwb-iot/uwb_api/proprietary/SRXXX/: AppConfigParams.c  AppConfigParams.h  PrintUtility_Proprietary.c  PrintUtility_Proprietary.h  PrintUtility_RfTest.c  PrintUtility_RfTest.h  UwbApi_Proprietary.c  (+7 more)
uwbiot-top/libs/uwb-iot/uwb_core/: CMakeLists.txt
uwbiot-top/libs/uwb-iot/uwb_core/adaptation/: UwbAdaptation.c
uwbiot-top/libs/uwb-iot/uwb_core/include/: UwbAdaptation.h  uwb_hal_api.h  uwb_hal_int.h  uwb_target.h
uwbiot-top/zephyr/: CMakeLists.txt  Kconfig.uwb  module.yml  zephyr.cmake
(+9 files in other folders)
